// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseSearchCard > renders default as expected 1`] = `
<div>
  <a
    class="course-search-card flex sm:flex-row flex-col gap-6 container-lined p-6 max-w-[828px] size-full transition-transform duration-200 hover:scale-[1.01] hover:container-elevated"
    href="https://bluedot.org/courses/what-the-fish"
    tabindex="0"
  >
    <div
      class="course-search-card__image-container h-[240px] sm:w-fit w-full"
    >
      <img
        alt="Title"
        class="course-search-card__image size-full object-cover rounded-lg"
        src="/images/courses/default.jpg"
      />
    </div>
    <div
      class="course-search-card__content flex flex-col justify-between gap-space-between flex-1"
    >
      <div
        class="course-search-card__text"
      >
        <h3
          class="bluedot-h3 not-prose course-search-card__title mb-4"
        >
          Title
        </h3>
      </div>
      <div
        class="course-search-card__footer flex flex-wrap gap-4"
      >
        <div
          class="flex gap-2"
        />
      </div>
    </div>
  </a>
</div>
`;

exports[`CourseSearchCard > renders with optional args 1`] = `
<div>
  <a
    class="course-search-card flex sm:flex-row flex-col gap-6 container-lined p-6 max-w-[828px] size-full transition-transform duration-200 hover:scale-[1.01] hover:container-elevated"
    href="https://bluedot.org/courses/what-the-fish"
    tabindex="0"
  >
    <div
      class="course-search-card__image-container h-[240px] sm:w-fit w-full"
    >
      <img
        alt="Title"
        class="course-search-card__image size-full object-cover rounded-lg"
        src="/courses/what-the-fish/image.png"
      />
    </div>
    <div
      class="course-search-card__content flex flex-col justify-between gap-space-between flex-1"
    >
      <div
        class="course-search-card__text"
      >
        <h3
          class="bluedot-h3 not-prose course-search-card__title mb-4"
        >
          Title
        </h3>
        <p
          class="bluedot-p not-prose course-search-card__description overflow-hidden text-bluedot-black text-ellipsis mb-6"
        >
          A short description of the course
        </p>
      </div>
      <div
        class="course-search-card__footer flex flex-wrap gap-4"
      >
        <div
          class="flex gap-2"
        >
          <span
            class="tag container-lined inline-flex items-center px-4 py-2 text-xs font-semibold text-color-secondary-text course-search-card__level"
            role="status"
          >
            Beginner
          </span>
          <span
            class="tag container-lined inline-flex items-center px-4 py-2 text-xs font-semibold text-color-secondary-text course-search-card__duration"
            role="status"
          >
            Weekly
          </span>
        </div>
        <div
          class="course-card__footer-left ml-auto text-size-xs text-bluedot-black gap-1 flex flex-col items-end justify-end"
        >
          <span
            class="course-card__rating flex gap-[3px] items-start font-bold pb-2"
          >
            4.7
             
            <svg
              class="mt-px"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </a>
</div>
`;
